fix warnings about px and scale

--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -3256,31 +3256,31 @@ scale {
   scale marks {
     color: alpha(currentColor,0.4); }
     scale marks.top {
-      margin-bottom: 6;
+      margin-bottom: 10.2px;
       margin-top: -20.4px; }
     scale marks.bottom {
-      margin-top: 6;
+      margin-top: 10.2px;
       margin-bottom: -20.4px; }
     scale marks.top {
-      margin-right: 6;
+      margin-right: 10.2px;
       margin-left: -20.4px; }
     scale marks.bottom {
-      margin-left: 6;
+      margin-left: 10.2px;
       margin-right: -20.4px; }
   scale.fine-tune marks.top {
-    margin-bottom: 6;
+    margin-bottom: 10.2px;
     margin-top: -15.3px; }
   scale.fine-tune marks.bottom {
-    margin-top: 6;
+    margin-top: 10.2px;
     margin-bottom: -15.3px; }
   scale.fine-tune marks.top {
-    margin-right: 6;
+    margin-right: 10.2px;
     margin-left: -15.3px; }
   scale.fine-tune marks.bottom {
-    margin-left: 6;
+    margin-left: 10.2px;
     margin-right: -15.3px; }
   scale.horizontal indicator {
-    min-height: 6;
+    min-height: 10.2px;
     min-width: 1.7px; }
   scale.horizontal.fine-tune indicator {
     min-height: 5.1px; }
